--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20868,3 +20868,7 @@ h3.cart-page-title {
     border: 1px solid rgb(52, 127, 189);
     box-shadow: 0px, 0px, 5px, rgb(73, 73, 73);
 }
+
+.activer {
+    font-weight: bolder;
+}
