reglage avec le cote admin

--- a/public/users/assets/css/style.css
+++ b/public/users/assets/css/style.css
@@ -7195,7 +7195,7 @@ textarea:focus {
 }
 
 .hm6-hero-slider-img {
-    margin-left: 33px;
+    margin-left: 0px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -20874,4 +20874,8 @@ h3.cart-page-title {
 }
 .bg-rose{
     background-color: rgb(255, 200, 226);
+}
+
+.bg-girs{
+    background-color: rgb(218, 208, 208);
 }
